Fix: too much spacing around headers

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -55,11 +55,10 @@ vellum-doc::part(index-h4) {
   }
 }
 
-#document h1,
 #document h2,
 #document h3,
 #document h4 {
-  margin-top: 2em;
+  margin-top: 1.5em;
   margin-bottom: 1em;
 }
 
